--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-git initMONGODB_URI=mongodb+srv://ellyf:EVANIAMARIA1@cluster0.kqi56.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://ellyf:EVANIAMARIA1@cluster0.kqi56.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
