--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.13.2",
     "luxon": "^3.5.0",
-    "mongodb": "^6.11.0",
-    "next": "15.0.2",
+    "mongodb": "^6.20.0",
+    "next": "^15.5.6",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.5"
