--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^15.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^11.0.5",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
