--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "luxon": "^3.5.0",
     "mongodb": "^6.21.0",
+    "motion": "^12.23.25",
     "next": "^15.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -20,7 +21,10 @@
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
   }
 }
